update ++ drag feature

--- a/index.html
+++ b/index.html
@@ -2,9 +2,113 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <meta lang="en-US"
+    <meta lang="en-US">
     <link href="css/main.css" rel="stylesheet">
   </head>
   <body>
+    <div class="wrapper">
+    <header>
+      <div class="duo">
+      <div class="circle"></div>
+    </div>
+      <div class="line"></div>
+    </header>
+    <section class="portfolio-container">
+        <div class="portfolio-title">
+          <div class="item onion"></div>
+          <h2>Haenyo</h2>
+        </div>
+        <div class="img-container">
+          <img src="https://freight.cargocollective.com/t/original/i/d26c3a8dc5922af0ed4e04be5bd2a2083872845eb8168d3bf9d798fc3ffb682f/drinknosleep.png">
+        </div>
+        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
+        </p>
+        <div class="portfolio-title">
+          <div class="item onion"></div>
+          <h2>ScratchMade</h2>
+        </div>
+        <div class="img-container">
+          <img src="https://freight.cargocollective.com/t/original/i/d26c3a8dc5922af0ed4e04be5bd2a2083872845eb8168d3bf9d798fc3ffb682f/drinknosleep.png">
+        </div>
+        <p>1. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
+        </p>
+        <div class="portfolio-title">
+          <div class="item onion"></div>
+          <h2>Power Slam Wrestling</h2>
+        </div>
+        <div class="img-container">
+          <img class="img one" src="http://media.virbcdn.com/cdn_images/resize_500x500/fa/184165201a02b242-jerrod_web.jpg">
+          <img class="img two" src="https://freight.cargocollective.com/t/original/i/d26c3a8dc5922af0ed4e04be5bd2a2083872845eb8168d3bf9d798fc3ffb682f/drinknosleep.png">
+          <img class="img three" src="http://media.virbcdn.com/cdn_images/resize_500x500/fa/184165201a02b242-jerrod_web.jpg">
+        </div>
+        <p>2. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
+        </p>
+        <div class="portfolio-title">
+          <div class="item onion"></div>
+          <h2>Urban Teachers</h2>
+        </div>
+        <div class="img-container">
+          <img src="https://freight.cargocollective.com/t/original/i/d26c3a8dc5922af0ed4e04be5bd2a2083872845eb8168d3bf9d798fc3ffb682f/drinknosleep.png">
+        </div>
+        <p>3.Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
+        </p>
+        <div class="portfolio-title">
+          <div class="item onion"></div>
+          <h2>Whitebox</h2>
+        </div>
+        <div class="img-container">
+          <img src="https://freight.cargocollective.com/t/original/i/d26c3a8dc5922af0ed4e04be5bd2a2083872845eb8168d3bf9d798fc3ffb682f/drinknosleep.png">
+        </div>
+        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
+        </p>
+        <div class="portfolio-title">
+          <div class="item onion"></div>
+          <h2>Foodshed</h2>
+        </div>
+        <div class="img-container">
+          <img src="https://freight.cargocollective.com/t/original/i/d26c3a8dc5922af0ed4e04be5bd2a2083872845eb8168d3bf9d798fc3ffb682f/drinknosleep.png">
+        </div>
+        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
+        </p>
+        <div class="portfolio-title">
+          <div class="item onion"></div>
+          <h2>Illustration</h2>
+        </div>
+        <div class="img-container">
+          <img src="https://freight.cargocollective.com/t/original/i/d26c3a8dc5922af0ed4e04be5bd2a2083872845eb8168d3bf9d798fc3ffb682f/drinknosleep.png">
+        </div>
+        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
+        </p>
+    </section>
+    <section id="about">
+      <div class="profile">
+        <div class="circle-2"></div>
+        <img class="img" src="assets/selfportrait-2018.svg">
+      </div>
+      <div class="bio">
+      <p>Thanks for taking a peak. Hope you enjoyed your variable. I’m a process oriented Designer and Illustrator currently working on my skills in understanding and building with code. I'm originally from beautiful beachy Southern California. I graduated from the Maryland Institute College of Art in 2015 and decided to make Baltimore my new home. Between reading physics articles and whipping up Ecuadorian food from family recipes, I always stay busy. On the weekend you’ll most likely find me eating a large bowl of Pho or watching Curb Your Enthusiasm.
+      </p>
+      <ul>
+        <li>InDesign</li>
+        <li>Illustrator</li>
+        <li>Photoshop</li>
+        <li>After Effects</li>
+        <li>Sketch</li>
+        <li>Zeplin</li>
+        <li>InVision</li>
+      </ul>
+      <h6>han designed & coded this site from scratch</h6>
+      </div>
+    </section>
+    <footer>
+      <h1>han castanedo</h1>
+      <h1><a id="btnabt" href="javascript:void(0);">about</a></h1>
+    </footer>
+  </div>
+  <script src="js/jquery-3.3.1.min.js"></script>
+  <script src="js/jquery.waypoints.min.js"></script>
+<!--  <script src="js/scrollreveal.min.js"></script> -->
+  <script src="js/main.js"></script>
+  <script src="jquery-test.js"></script>
   </body>
 </html>
