design changes and bug fixes v1

--- a/index.html
+++ b/index.html
@@ -4,111 +4,189 @@
     <meta charset="UTF-8">
     <meta lang="en-US">
     <link href="css/main.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
-    <div class="wrapper">
     <header>
-      <div class="duo">
-      <div class="circle"></div>
-    </div>
       <div class="line"></div>
     </header>
-    <section class="portfolio-container">
+    <section class="portfolio-container box_1">
+            <div class="portfolio-title">
+              <div class="item home"><strong><em>//</em></strong></div>
+              <div></div>
+            </div>
+            <!--<div class="bg-gradient"></div>
+            <div class="bg-gradient-2"></div>-->
+            <div class="marquee">
+              <div class="push"></div>
+            </div>
+          <div class="portfolio-info">
+            <h2>Push, Often.</h2>
+            <p>Below are select samples of recent works. Each one was made with the intent of pushing creative boundaries and improving the quality of each subsequent project.
+            </p>
+          </div>
+          <div class="scrl-ind"></div>
+        </section>
+    <section class="portfolio-container box_2">
         <div class="portfolio-title">
-          <div class="item onion"></div>
-          <h2>Haenyo</h2>
+          <div class="item haenyo"></div>
+          <div></div>
         </div>
         <div class="img-container">
-          <img src="https://freight.cargocollective.com/t/original/i/d26c3a8dc5922af0ed4e04be5bd2a2083872845eb8168d3bf9d798fc3ffb682f/drinknosleep.png">
+          <img class="img one" src="assets/haenyo/haenyo_cafeandamiro_2.png">
+          <img class="img two" src="assets/haenyo/haenyo_square_2.png">
+          <img class="img three" src="assets/haenyo/haenyo_themorethemerrior_2.png">
+          <img class="img four" src="assets/haenyo/haenyo_springindc.png">
+          <img class="img five" src="assets/haenyo/haenyo-pekopekoramen.png">
         </div>
-        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
+      <div class="portfolio-info">
+        <h2>Haenyo</h2>
+        <p>haenyo is a colorful Korean pop-up food venture started by Irvin Seo and Collin Morstein. We developed the haenyo identity to be a flexible visual system so that we could incorporate some of the flavor of the restaurants that graciously hosted us while still maintaining a recognizable presence. The pop-up has executed over 50 dinners since its inception in 2017.
         </p>
+      </div>
+      <div class="scrl-ind"></div>
+    </section>
+    <section class="portfolio-container box_3">
         <div class="portfolio-title">
-          <div class="item onion"></div>
-          <h2>ScratchMade</h2>
+          <div class="item scratchmade"></div>
         </div>
         <div class="img-container">
-          <img src="https://freight.cargocollective.com/t/original/i/d26c3a8dc5922af0ed4e04be5bd2a2083872845eb8168d3bf9d798fc3ffb682f/drinknosleep.png">
+          <img class="img one" src="assets/scratchmade/scratchmade-2raisin-lighttaupe.png">
+          <img class="img two" src="assets/scratchmade/scratchmade-flyer.png">
+          <img class="img three" src="assets/scratchmade/scratchmade-5x7-postcard.png">
         </div>
-        <p>1. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
+      <div class="portfolio-info">
+        <h2>ScratchMade</h2>
+        <p>Collin Morstein and Irvin Seo expanded their skills in the kitchen beyond their pop-up dinners  by creating a meal service with a plethora of options, all made from scratch. We created an identity and design system that drew inspiration from antique Italian and Russian recipe cards. We set out to create something playful and injected with some humor.
         </p>
+        <p class="future-scopes">
+          <strong>Future Scopes:</strong> ScratchMade Website, <em>fall 2018</em>
+        </p>
+      </div>
+      <div class="scrl-ind"></div>
+    </section>
+    <section class="portfolio-container box_4">
         <div class="portfolio-title">
-          <div class="item onion"></div>
-          <h2>Power Slam Wrestling</h2>
+          <div class="item powerslam"></div>
         </div>
         <div class="img-container">
-          <img class="img one" src="http://media.virbcdn.com/cdn_images/resize_500x500/fa/184165201a02b242-jerrod_web.jpg">
-          <img class="img two" src="https://freight.cargocollective.com/t/original/i/d26c3a8dc5922af0ed4e04be5bd2a2083872845eb8168d3bf9d798fc3ffb682f/drinknosleep.png">
-          <img class="img three" src="http://media.virbcdn.com/cdn_images/resize_500x500/fa/184165201a02b242-jerrod_web.jpg">
+          <img class="img one" src="assets/powerslam/dark-back.png">
+          <img class="img two" src="assets/powerslam/chop-m.png">
+          <img class="img three" src="assets/powerslam/bodyslam-y.png">
+          <img class="img four" src="assets/powerslam/kick-c.png">
         </div>
-        <p>2. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
+        <div class="portfolio-info">
+        <h2>Power Slam Wrestling</h2>
+        <p>Gnarwhal Studios (creators of Humans vs. Zombies and Slap45) that I worked on with Christopher J Chester. Together we designed and illustrated the identity, cards, and board. The visuals were heavily influenced by prime 80's wrestling androgyny and glam. Watch a beta test of the gameplay here.
         </p>
+      </div>
+      <div class="scrl-ind"></div>
+    </section>
+    <section class="portfolio-container box_5">
         <div class="portfolio-title">
-          <div class="item onion"></div>
-          <h2>Urban Teachers</h2>
+          <div class="item urbanteachers"></div>
         </div>
         <div class="img-container">
-          <img src="https://freight.cargocollective.com/t/original/i/d26c3a8dc5922af0ed4e04be5bd2a2083872845eb8168d3bf9d798fc3ffb682f/drinknosleep.png">
+          <img class="img web one" src="assets/urbanteachers/UT-Website-Scroll.gif">
         </div>
-        <p>3.Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
+      <div class="portfolio-info">
+        <h2>Urban Teachers</h2>
+        <p>For this project, I built all of the the front-end development with the goal of maintaining the integrity of the original flats and assets (designed by Christopher)  This website was built from scratch, utilizing relative units instead of solid pixels, with CSS grids to keep the site light and responsive to emphasize the clean design.
         </p>
+      </div>
+      <div class="scrl-ind"></div>
+    </section>
+    <section class="portfolio-container box_6">
         <div class="portfolio-title">
-          <div class="item onion"></div>
-          <h2>Whitebox</h2>
+          <div class="item pilon"></div>
         </div>
         <div class="img-container">
-          <img src="https://freight.cargocollective.com/t/original/i/d26c3a8dc5922af0ed4e04be5bd2a2083872845eb8168d3bf9d798fc3ffb682f/drinknosleep.png">
+            <video autoplay muted loop class="img web">
+  <source src="assets/pilon/pilon-test-4.mp4" type="video/mp4" />
+  </video>
         </div>
-        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
+      <div class="portfolio-info">
+        <h2>Pilon</h2>
+        <p>As a headless API-first e-commerce product, it was important that Pilon’s website appealed to advanced developers in the field. With this in mind, the design needed to be based around interactive visual elements, like the animated gradient background, to emphasize lightweight technology that’s easy to use.
         </p>
+      </div>
+      <div class="scrl-ind"></div>
+    </section>
+    <section class="portfolio-container box_7">
         <div class="portfolio-title">
-          <div class="item onion"></div>
-          <h2>Foodshed</h2>
+          <div class="item foodshed"></div>
         </div>
         <div class="img-container">
-          <img src="https://freight.cargocollective.com/t/original/i/d26c3a8dc5922af0ed4e04be5bd2a2083872845eb8168d3bf9d798fc3ffb682f/drinknosleep.png">
+          <img class="img one" src="assets/foodshed/ac-union-graze-2016-02_1340_c.jpg">
+          <img class="img two" src="assets/foodshed/p-l-hoppin-john-kit-01_1340_c.jpg">
+          <img class="img three" src="assets/foodshed/cj-bandposter-sketch.jpg">
         </div>
-        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
-        </p>
+      <div class="portfolio-info">
+        <h2>Foodshed</h2>
+        <p>Foodshed (founded by chef Spike Gjerde) is a Baltimore based restaurant group, consisting of: Artifact Coffee, Woodberry Kitchen, Parts & Labor, Grand Cru, and Bird in Hand. I worked in-house and directly with chefs and managers to design all material for events, menus, social presence, and retail packing within individual restaurant brand guidelines.
+      </div>
+      <div class="scrl-ind"></div>
+    </section>
+    <section class="portfolio-container box_8">
         <div class="portfolio-title">
           <div class="item onion"></div>
-          <h2>Illustration</h2>
         </div>
         <div class="img-container">
-          <img src="https://freight.cargocollective.com/t/original/i/d26c3a8dc5922af0ed4e04be5bd2a2083872845eb8168d3bf9d798fc3ffb682f/drinknosleep.png">
+          <img class="img one" src="assets/illustration/drinknosleep.png">
+          <img class="img two" src="assets/illustration/doobys5yearlotparty-8.5x11.png">
+          <img class="img three" src="assets/illustration/conjunto-bruja-b.png">
+          <img class="img four" src="assets/illustration/cj-bandposter-color-draft2.png">
         </div>
-        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
-        </p>
+      <div class="portfolio-info">
+        <h2>Small Projects</h2>
+        <p>Smaller freelance projects have often been the start of relationships that turn into the most fulfilling projects I’ve had the pleasure of working on.
+      </div>
     </section>
     <section id="about">
       <div class="profile">
         <div class="circle-2"></div>
         <img class="img" src="assets/selfportrait-2018.svg">
       </div>
+      <div class="line-2"></div>
       <div class="bio">
-      <p>Thanks for taking a peak. Hope you enjoyed your variable. I’m a process oriented Designer and Illustrator currently working on my skills in understanding and building with code. I'm originally from beautiful beachy Southern California. I graduated from the Maryland Institute College of Art in 2015 and decided to make Baltimore my new home. Between reading physics articles and whipping up Ecuadorian food from family recipes, I always stay busy. On the weekend you’ll most likely find me eating a large bowl of Pho or watching Curb Your Enthusiasm.
-      </p>
-      <ul>
-        <li>InDesign</li>
-        <li>Illustrator</li>
-        <li>Photoshop</li>
-        <li>After Effects</li>
-        <li>Sketch</li>
-        <li>Zeplin</li>
-        <li>InVision</li>
-      </ul>
-      <h6>han designed & coded this site from scratch</h6>
+        <div class="greeting"></div>
+        <p>I’m a Latinx multidisciplinary designer living and working out of Baltimore, MD. My current obsession has been learning to build with code. I'm originally from Southern California and moved to Baltimore to attend MICA, where I graduated in 2015. I currently work at Kapowza as an Interactive Designer.
+</p>
+<p>
+When I’m not working, I stay busy by reading physics articles, powerlifting, and cooking Ecuadorian food. My ideal weekend is eating a huge bowl of Pho and watching Curb Your Enthusiasm.
+
+        </p>
+        <h6>This site was designed & coded from scratch. No templates - just learning.</h6>
+      </div>
+      <div class="skills">
+        <h3>skills</h3>
+        <ul>
+          <li>Front-End Web Development</li>
+          <li>Illustration</li>
+          <li>Printmaking & Production</li>
+          <li>Project Management</li>
+        </ul>
+        <h3>programs</h3>
+        <ul>
+          <li>InDesign</li>
+          <li>Illustrator</li>
+          <li>Photoshop</li>
+          <li>After Effects</li>
+          <li>Adobe Xd</li>
+          <li>Sketch</li>
+          <li>Zeplin</li>
+          <li>InVision</li>
+        </ul>
       </div>
     </section>
-    <footer>
+  <footer id="ftr">
       <h1>han castanedo</h1>
-      <h1><a id="btnabt" href="javascript:void(0);">about</a></h1>
-    </footer>
-  </div>
+      <button id="example-three" data-text-swap="x">about</button>
+  </footer>
   <script src="js/jquery-3.3.1.min.js"></script>
-  <script src="js/jquery.waypoints.min.js"></script>
-<!--  <script src="js/scrollreveal.min.js"></script> -->
-  <script src="js/main.js"></script>
+  <script src="time-greeting.js"></script>
   <script src="jquery-test.js"></script>
+  <script src="delay-scroll-test.js"></script>
+  <script src="about.js"></script>
   </body>
 </html>
