clean up assets

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
           <div class="item powerslam"></div>
         </div>
         <div class="img-container">
-          <img class="img one" src="assets/powerslam/dark-back.png">
-          <img class="img two" src="assets/powerslam/chop-m.png">
+          <img class="img one" src="assets/powerslam/Dark-Back.png">
+          <img class="img two" src="assets/powerslam/Chop-M.png">
           <img class="img three" src="assets/powerslam/bodyslam-y.png">
           <img class="img four" src="assets/powerslam/kick-c.png">
         </div>
