fix case for image paths

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
         <div class="img-container">
           <img class="img one" src="assets/powerslam/Dark-Back.png">
           <img class="img two" src="assets/powerslam/Chop-M.png">
-          <img class="img three" src="assets/powerslam/bodyslam-y.png">
-          <img class="img four" src="assets/powerslam/kick-c.png">
+          <img class="img three" src="assets/powerslam/BodySlam-Y.png">
+          <img class="img four" src="assets/powerslam/Kick-C.png">
         </div>
         <div class="portfolio-info">
         <h2>Power Slam Wrestling</h2>
@@ -117,8 +117,8 @@
           <div class="item foodshed"></div>
         </div>
         <div class="img-container">
-          <img class="img one" src="assets/foodshed/ac-union-graze-2016-02_1340_c.jpg">
-          <img class="img two" src="assets/foodshed/p-l-hoppin-john-kit-01_1340_c.jpg">
+          <img class="img one" src="assets/foodshed/AC-union-graze-2016-02_1340_c.jpg">
+          <img class="img two" src="assets/foodshed/P-L-hoppin-john-kit-01_1340_c.jpg">
           <img class="img three" src="assets/foodshed/cj-bandposter-sketch.jpg">
         </div>
       <div class="portfolio-info">
