remove mix-blend-mode

--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
               <div class="item home"><strong><em>//</em></strong></div>
               <div></div>
             </div>
-            <!--<div class="bg-gradient"></div>
-            <div class="bg-gradient-2"></div>-->
             <div class="marquee">
               <div class="push"></div>
             </div>
@@ -40,7 +38,7 @@
           <img class="img five" src="assets/haenyo/haenyo-pekopekoramen.png">
         </div>
       <div class="portfolio-info">
-        <h2>Haenyo</h2>
+        <h2>haenyo</h2>
         <p>haenyo is a colorful Korean pop-up food venture started by Irvin Seo and Collin Morstein. We developed the haenyo identity to be a flexible visual system so that we could incorporate some of the flavor of the restaurants that graciously hosted us while still maintaining a recognizable presence. The pop-up has executed over 50 dinners since its inception in 2017.
         </p>
       </div>
@@ -154,7 +152,6 @@
 </p>
 <p>
 When I’m not working, I stay busy by reading physics articles, powerlifting, and cooking Ecuadorian food. My ideal weekend is eating a huge bowl of Pho and watching Curb Your Enthusiasm.
-
         </p>
         <h6>This site was designed & coded from scratch. No templates - just learning.</h6>
       </div>
