add loading screen + clean up

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
+    <section class="loading">
+      <span class="loading__anim"></span>
+      <p>loading...</p>
+    </section>
+
     <header>
       <div class="line"></div>
     </header>
@@ -142,7 +147,7 @@
     </section>
     <section id="about">
       <div class="profile">
-        <div class="circle-2"></div>
+        <div class="circle"></div>
         <img class="img" src="assets/selfportrait-2018.svg">
       </div>
       <div class="line-2"></div>
@@ -180,6 +185,7 @@ When I’m not working, I stay busy by reading physics articles, powerlifting, a
       <h1>han castanedo</h1>
       <button id="example-three" data-text-swap="x">about</button>
   </footer>
+  <script src="loading.js"></script>
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="time-greeting.js"></script>
   <script src="jquery-test.js"></script>
