--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta lang="en-US">
     <link href="css/main.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="loading.js"></script>
-    <script src="js/mobile.js"></script>
-    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/loading.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   </head>
   <body>
     <section class="loading">
@@ -188,9 +187,8 @@ When I’m not working, I stay busy by reading physics articles, powerlifting, a
       <h1>han castanedo</h1>
       <button id="example-three" data-text-swap="x">about</button>
   </footer>
-  <script src="time-greeting.js"></script>
-  <script src="jquery-test.js"></script>
-  <script src="about.js"></script>
-  <script src="delay-scroll-test.js"></script>
+  <script src="js/desktop.js"></script>
+  <script src="js/time-greeting.js"></script>
+  <script src="js/about.js"></script>
   </body>
 </html>
