change body font color and update image assets

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
     <section class="portfolio-container box_1">
             <div class="portfolio-title">
-              <div class="item home"><strong><em>//</em></strong></div>
+              <div class="item home"><em>//</em></div>
               <div></div>
             </div>
             <div class="marquee">
@@ -61,10 +61,7 @@
         </div>
       <div class="portfolio-info">
         <h2>ScratchMade</h2>
-        <p>Collin Morstein and Irvin Seo expanded their skills in the kitchen beyond their pop-up dinners  by creating a meal service with a plethora of options, all made from scratch. We created an identity and design system that drew inspiration from antique Italian and Russian recipe cards. We set out to create something playful and injected with some humor.
-        </p>
-        <p class="future-scopes">
-          <strong>Future Scopes:</strong> ScratchMade Website, <em>fall 2018</em>
+        <p>Collin Morstein and Irvin Seo expanded their skills in the kitchen beyond their pop-up dinners  by creating a meal service with a plethora of options, all made from scratch. We created an identity and design system that drew inspiration from antique Italian and Russian recipe cards. We set out to create something playful and injected with some humor. Currently designing an online ordering system to be released in the fall of 2018.
         </p>
       </div>
       <div class="scrl-ind"></div>
