add rules and device svg window

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <section class="portfolio-container box_1">
             <div class="portfolio-title">
               <div class="item home"><em>//</em></div>
-              <div></div>
+              <div class="number">1/8</div>
+              </div>
             </div>
             <div class="marquee">
               <div class="push"></div>
@@ -34,14 +35,15 @@
     <section class="portfolio-container box_2">
         <div class="portfolio-title">
           <div class="item haenyo"></div>
-          <div></div>
+          <div class="number">2/8</div>
+        </div>
         </div>
         <div class="img-container">
           <img class="img one" src="assets/haenyo/haenyo_cafeandamiro_2.png">
           <img class="img two" src="assets/haenyo/haenyo_square_2.png">
           <img class="img three" src="assets/haenyo/haenyo_themorethemerrior_2.png">
           <img class="img four" src="assets/haenyo/haenyo_springindc.png">
-          <img class="img five" src="assets/haenyo/haenyo-PekoPekoRamen.png">
+          <img class="img five" src="assets/haenyo/Haenyo-PekoPekoRamen.png">
         </div>
       <div class="portfolio-info">
         <h2>haenyo</h2>
@@ -53,6 +55,7 @@
     <section class="portfolio-container box_3">
         <div class="portfolio-title">
           <div class="item scratchmade"></div>
+          <div class="number">3/8</div>
         </div>
         <div class="img-container">
           <img class="img one" src="assets/scratchmade/scratchmade-2raisin-lighttaupe.png">
@@ -69,6 +72,7 @@
     <section class="portfolio-container box_4">
         <div class="portfolio-title">
           <div class="item powerslam"></div>
+          <div class="number">4/8</div>
         </div>
         <div class="img-container">
           <img class="img one" src="assets/powerslam/Dark-Back.png">
@@ -86,11 +90,15 @@
     <section class="portfolio-container box_5">
         <div class="portfolio-title">
           <div class="item urbanteachers"></div>
+          <div class="number">5/8</div>
         </div>
         <div class="vid-container">
+          <div class="vid-container-2">
+            <img class="screen-top" src="assets/screentop.svg">
             <video autoplay muted loop>
   <source src="assets/urbanteachers/UrbanTeachers-HomepageAnimation.mov" type="video/mp4" />
   </video>
+</div>
         </div>
       <div class="portfolio-info">
         <h2>Urban Teachers</h2>
@@ -102,11 +110,15 @@
     <section class="portfolio-container box_6">
         <div class="portfolio-title">
           <div class="item pilon"></div>
+          <div class="number">6/8</div>
         </div>
         <div class="vid-container">
+          <div class="vid-container-2">
+            <img class="screen-top" src="assets/screentop.svg">
             <video autoplay muted loop>
   <source src="assets/pilon/pilon-test-4.mp4" type="video/mp4" />
   </video>
+</div>
         </div>
       <div class="portfolio-info">
         <h2>Pilon</h2>
@@ -118,6 +130,7 @@
     <section class="portfolio-container box_7">
         <div class="portfolio-title">
           <div class="item foodshed"></div>
+          <div class="number">7/8</div>
         </div>
         <div class="img-container">
           <img class="img one" src="assets/foodshed/AC-union-graze-2016-02_1340_c.jpg">
@@ -133,6 +146,7 @@
     <section class="portfolio-container box_8">
         <div class="portfolio-title">
           <div class="item onion"></div>
+          <div class="number">8/8</div>
         </div>
         <div class="img-container">
           <img class="img one" src="assets/illustration/drinknosleep.png">
